--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
-                <a href="#home" class="text-white hover:text-[#c99976] transition-all duration-300">Home</a>
-                <a href="#about" class="text-white hover:text-[#c99976] transition-all duration-300">About</a>
+                <a href="#home" class="text-white hover:text-[#aa724d] transition-all duration-300">Home</a>
+                <a href="#about" class="text-white hover:text-[#aa724d] transition-all duration-300">About</a>
                 <a href="pages/leaderboard.html"
-                    class="text-white hover:text-[#c99976] transition-all duration-300">Leaderboard</a>
-                <a href="pages/staff.html" class="text-white hover:text-[#c99976] transition-all duration-300">Staff</a>
+                    class="text-white hover:text-[#aa724d] transition-all duration-300">Leaderboard</a>
+                <a href="pages/staff.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Staff</a>
                 <a href="pages/donate.html"
-                    class="text-white hover:text-[#c99976] transition-all duration-300">Donate</a>
-                <a href="pages/rules.html" class="text-white hover:text-[#c99976] transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#aa724d] transition-all duration-300">Donate</a>
+                <a href="pages/rules.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Rules</a>
                 <a href="pages/recruitment.html"
-                    class="bg-[#c99976] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -52,27 +52,27 @@
 
             <!-- Mobile Dropdown Menu -->
             <div id="dropdown-menu"
-                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-[#c99976] p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
+                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-[#aa724d] p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
                 <a href="#home"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏠
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏠
                     Home</a>
                 <a href="#about"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">ℹ️
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">ℹ️
                     About</a>
                 <a href="pages/leaderboard.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏆
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏆
                     Leaderboard</a>
                 <a href="pages/staff.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">👥
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">👥
                     Staff</a>
                 <a href="pages/donate.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">💰
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">💰
                     Donate</a>
                 <a href="pages/rules.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">📜
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">📜
                     Rules</a>
                 <a href="pages/recruitment.html"
-                    class="block text-white bg-[#c99976] hover:bg-[#6d4c35] px-6 py-3 rounded-lg transition-all duration-300">📚
+                    class="block text-white bg-[#aa724d] hover:bg-[#6d4c35] px-6 py-3 rounded-lg transition-all duration-300">📚
                     Recruitment</a>
             </div>
         </div>
@@ -93,11 +93,11 @@
         <!-- Content -->
         <div class="relative z-20 mx-5 sm:mx-10 lg:mx-40 text-white">
             <div class="mb-5">
-                <h3 class="text-xl sm:text-2xl font-semibold tracking-wide text-[#c99976]" data-aos="fade-right">
+                <h3 class="text-xl sm:text-2xl font-semibold tracking-wide text-[#aa724d]" data-aos="fade-right">
                     SMKN 5 KIEV
                 </h3>
                 <h1 class="text-4xl sm:text-5xl lg:text-7xl font-bold tracking-wider mb-4" data-aos="fade-right">
-                    BEST <span class="text-[#c99976]">INDONESIA</span> DISCORD SERVER
+                    BEST <span class="text-[#aa724d]">INDONESIA</span> DISCORD SERVER
                 </h1>
                 <p class="text-sm sm:text-lg lg:text-xl leading-relaxed lg:w-3/5" data-aos="fade-right">
                     SMKN 5 Kiev's Discord server is the best in Indonesia! It's a vibrant community where everyone can
@@ -105,7 +105,7 @@
                 </p>
             </div>
             <button
-                class="px-4 py-2 sm:px-6 sm:py-3 bg-[#c99976] text-white font-medium text-sm sm:text-lg rounded-lg hover:bg-[#6d4c35] transition-all duration-300"
+                class="px-4 py-2 sm:px-6 sm:py-3 bg-[#aa724d] text-white font-medium text-sm sm:text-lg rounded-lg hover:bg-[#6d4c35] transition-all duration-300"
                 data-aos="fade-right">
                 <a href="#about" class="text-white">Learn More</a>
             </button>
@@ -119,7 +119,7 @@
             <!-- Header Section -->
             <div class="text-center">
                 <h1 class="text-xl sm:text-2xl md:text-3xl  font-bold">
-                    ❓ ABOUT <span class="text-[#c99976]">SMKN 5 KIEV</span>
+                    ❓ ABOUT <span class="text-[#aa724d]">SMKN 5 KIEV</span>
                 </h1>
             </div>
             <!-- Content Section -->
@@ -163,7 +163,7 @@
                     <!-- Join Us Button -->
                     <div class="flex justify-center md:justify-start">
                         <a href="https://discord.gg/MwNE7Vfb6t" target="_blank"
-                            class="px-8 py-3 bg-[#c99976] text-white font-medium rounded-lg mt-6 hover:bg-[#6d4c35] transition-all duration-300">
+                            class="px-8 py-3 bg-[#aa724d] text-white font-medium rounded-lg mt-6 hover:bg-[#6d4c35] transition-all duration-300">
                             Join Server
                         </a>
                     </div>
@@ -192,15 +192,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
