--- a/pages/staff.html
+++ b/pages/staff.html
@@ -23,16 +23,16 @@
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
                 <a href="../index.html#home"
-                    class="text-white hover:text-[#c99976] transition-all duration-300">Home</a>
+                    class="text-white hover:text-[#aa724d] transition-all duration-300">Home</a>
                 <a href="../index.html#about"
-                    class="text-white hover:text-[#c99976] transition-all duration-300">About</a>
+                    class="text-white hover:text-[#aa724d] transition-all duration-300">About</a>
                 <a href="leaderboard.html"
-                    class="text-white hover:text-[#c99976] transition-all duration-300">Leaderboard</a>
-                <a href="staff.html" class="text-white hover:text-[#c99976] transition-all duration-300">Staff</a>
-                <a href="donate.html" class="text-white hover:text-[#c99976] transition-all duration-300">Donate</a>
-                <a href="rules.html" class="text-white hover:text-[#c99976] transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#aa724d] transition-all duration-300">Leaderboard</a>
+                <a href="staff.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Staff</a>
+                <a href="donate.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Donate</a>
+                <a href="rules.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
-                    class="bg-[#c99976] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -46,27 +46,27 @@
 
             <!-- Mobile Dropdown Menu -->
             <div id="dropdown-menu"
-                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-[#c99976] p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
+                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-[#aa724d] p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
                 <a href="../index.html#home"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏠
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏠
                     Home</a>
                 <a href="../index.html#about"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">ℹ️
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">ℹ️
                     About</a>
                 <a href="leaderboard.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏆
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏆
                     Leaderboard</a>
                 <a href="staff.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">👥
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">👥
                     Staff</a>
                 <a href="donate.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">💰
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">💰
                     Donate</a>
                 <a href="rules.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">📜
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">📜
                     Rules</a>
                 <a href="recruitment.html"
-                    class="block text-white bg-[#c99976] hover:bg-[#6d4c35] px-6 py-3 rounded-lg transition-all duration-300">📚
+                    class="block text-white bg-[#aa724d] hover:bg-[#6d4c35] px-6 py-3 rounded-lg transition-all duration-300">📚
                     Recruitment</a>
             </div>
         </div>
@@ -80,7 +80,7 @@
                 <div class="organizationBox-item">
                     <div class="organizationBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            👥 <span class="text-[#c99976]">ORGANIZATIONAL STRUCTURE</span> SMKN 5 KIEV
+                            👥 <span class="text-[#aa724d]">ORGANIZATIONAL STRUCTURE</span> SMKN 5 KIEV
                         </h1>
                     </div>
 
@@ -88,7 +88,7 @@
                     <div class="organizationBox-itemList flex flex-wrap gap-4 justify-center">
                         <!-- Community Manager -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
                             <h2 class=" text-lg font-semibold text-white">Community Manager (Admin)</h2>
                             <p class="text-gray-400 text-sm mt-2">Leads and oversees the server, makes major decisions,
                                 and
@@ -97,7 +97,7 @@
 
                         <!-- Division Manager -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
                             <h2 class=" text-lg font-semibold text-white">Division Manager</h2>
                             <p class="text-gray-400 text-sm mt-2">Responsible for managing and supervising each division
                                 within the community.</p>
@@ -105,7 +105,7 @@
 
                         <!-- Team Management -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
                             <h2 class=" text-lg font-semibold text-white">Team Management (Staff)</h2>
                             <p class="text-gray-400 text-sm mt-2">Includes all the divisions below, with a Manager
                                 overseeing each division.</p>
@@ -115,7 +115,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 w-full">
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#c99976]">Developer</h3>
+                                <h3 class="text-base font-semibold text-[#aa724d]">Developer</h3>
                                 <p class="text-gray-400 text-sm">Manages the website and server bots, ensuring the
                                     system
                                     runs smoothly.</p>
@@ -123,46 +123,46 @@
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#c99976]">Human Resource (HRD)</h3>
+                                <h3 class="text-base font-semibold text-[#aa724d]">Human Resource (HRD)</h3>
                                 <p class="text-gray-400 text-sm">Recruits new staff, oversees evaluations, and resolves
                                     internal issues.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#c99976]">Brand Ambassador</h3>
+                                <h3 class="text-base font-semibold text-[#aa724d]">Brand Ambassador</h3>
                                 <p class="text-gray-400 text-sm">Promotes the community and maintains a positive server
                                     image.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#c99976]">Event Organizer</h3>
+                                <h3 class="text-base font-semibold text-[#aa724d]">Event Organizer</h3>
                                 <p class="text-gray-400 text-sm">Plans and executes engaging and beneficial events.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#c99976]">Chat Moderator</h3>
+                                <h3 class="text-base font-semibold text-[#aa724d]">Chat Moderator</h3>
                                 <p class="text-gray-400 text-sm">Monitors chats, enforces rules, and fosters positive
                                     interactions.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#c99976]">Host Event</h3>
+                                <h3 class="text-base font-semibold text-[#aa724d]">Host Event</h3>
                                 <p class="text-gray-400 text-sm">Hosts events and actively interacts with members.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#c99976]">Designer</h3>
+                                <h3 class="text-base font-semibold text-[#aa724d]">Designer</h3>
                                 <p class="text-gray-400 text-sm">Creates server designs, banners, and logos.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#c99976]">Partner Manager</h3>
+                                <h3 class="text-base font-semibold text-[#aa724d]">Partner Manager</h3>
                                 <p class="text-gray-400 text-sm">Manages partnerships and maintains good relationships
                                     with
                                     server partners.</p>
@@ -171,7 +171,7 @@
 
                         <!-- Trainee -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
                             <h2 class=" text-lg font-semibold text-white">Trainee</h2>
                             <p class="text-gray-400 text-sm mt-2">Learns the server work system before being placed in a
                                 suitable division.</p>
@@ -209,15 +209,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
