--- a/pages/recruitment.html
+++ b/pages/recruitment.html
@@ -81,7 +81,7 @@
                 <div class="recruitmentBox-item">
                     <div class="recruitmentBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">📚 RECRUITMENT <span
-                                class="text-[#aa724d]">STAFF</span></h1>
+                                class="text-[#d49163]">STAFF</span></h1>
                         <p class="text-gray-400 text-sm mt-2">Join our team and help build a community better!</p>
                     </div>
                     <div class="recruitmentBox-itemList flex flex-wrap gap-4 justify-center">
@@ -169,15 +169,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
