--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
         <!-- Content -->
         <div class="relative z-20 mx-5 sm:mx-10 lg:mx-40 text-white">
             <div class="mb-5">
-                <h3 class="text-xl sm:text-2xl font-semibold tracking-wide text-[#aa724d]" data-aos="fade-right">
+                <h3 class="text-xl sm:text-2xl font-semibold tracking-wide text-[#d49163]" data-aos="fade-right">
                     SMKN 5 KIEV
                 </h3>
                 <h1 class="text-4xl sm:text-5xl lg:text-7xl font-bold tracking-wider mb-4" data-aos="fade-right">
-                    BEST <span class="text-[#aa724d]">INDONESIA</span> DISCORD SERVER
+                    BEST <span class="text-[#d49163]">INDONESIA</span> DISCORD SERVER
                 </h1>
                 <p class="text-sm sm:text-lg lg:text-xl leading-relaxed lg:w-3/5" data-aos="fade-right">
                     SMKN 5 Kiev's Discord server is the best in Indonesia! It's a vibrant community where everyone can
@@ -119,7 +119,7 @@
             <!-- Header Section -->
             <div class="text-center">
                 <h1 class="text-xl sm:text-2xl md:text-3xl  font-bold">
-                    ❓ ABOUT <span class="text-[#aa724d]">SMKN 5 KIEV</span>
+                    ❓ ABOUT <span class="text-[#d49163]">SMKN 5 KIEV</span>
                 </h1>
             </div>
             <!-- Content Section -->
@@ -192,15 +192,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
