--- a/pages/donate.html
+++ b/pages/donate.html
@@ -81,7 +81,7 @@
                 <div class="donateBox-item">
                     <div class="donateBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            💰 SUPPORT US <span class="text-[#aa724d]">BY DONATE TO SERVER</span>
+                            💰 SUPPORT US <span class="text-[#d49163]">BY DONATE TO SERVER</span>
                         </h1>
                         <p class="text-gray-400 text-sm mt-2">Donasi dari kamu bisa membantu kami membangun negeri</p>
                     </div>
@@ -219,15 +219,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
