--- a/pages/leaderboard.html
+++ b/pages/leaderboard.html
@@ -80,7 +80,7 @@
                 <div class="leaderboardBox-item">
                     <div class="leaderboardBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            🏆 MONTHLY <span class="text-[#aa724d]">LEADERBOARD</span>
+                            🏆 MONTHLY <span class="text-[#d49163]">LEADERBOARD</span>
                         </h1>
                         <p class="text-gray-400 text-sm mt-2">Top Monthly Season SMKN 5 KIEV</p>
                     </div>
@@ -111,15 +111,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-[#aa724d] hover:text-[#6d4c35] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
