--- a/pages/rules.html
+++ b/pages/rules.html
@@ -80,7 +80,7 @@
                 <div class="rulesBox-item">
                     <div class="rulesBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            📜 <span class="text-[#aa724d]">SERVER RULES</span>
+                            📜 <span class="text-[#d49163]">SERVER RULES</span>
                         </h1>
                     </div>
 
@@ -120,15 +120,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-[#aa724d] hover:text-[#aa724d] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-[#aa724d] hover:text-[#aa724d] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-[#aa724d] hover:text-[#aa724d] transition transform hover:scale-110">
+                            class="text-[#d49163] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
